# flow_square

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: analytics.py  assets.py  auth.py  compliance.py  fleet.py  incidents.py  reconciliation.py  router.py  telemetry.py  terminals.py  users.py  vessels.py  ws.py
backend/app/core/: constants.py  exceptions.py  logging.py  rbac.py  security.py
backend/app/models/: __init__.py  asset.py  base.py  compliance.py  fleet.py  incident.py  reconciliation.py  telemetry.py  terminal.py  user.py  vessel.py
backend/app/schemas/: analytics.py  asset.py  compliance.py  fleet.py  incident.py  reconciliation.py  telemetry.py  terminal.py  user.py  vessel.py
backend/app/services/: asset_service.py  auth_service.py  compliance_service.py  fleet_service.py  incident_service.py  notifications.py  reconciliation_service.py  telemetry_service.py  terminal_service.py  vessel_service.py
backend/app/services/analytics/: __init__.py  fraud_detection.py  integrity_health.py  (+4 more)
backend/app/utils/: geofence.py  tolerance.py  units.py
backend/app/workers/: alert_tasks.py  celery_app.py  reconciliation_tasks.py  report_tasks.py  telemetry_tasks.py
backend/tests/: conftest.py  factories.py  test_assets.py  test_auth.py  test_compliance.py  test_fleet.py  test_reconciliation.py  test_telemetry.py  test_units.py
(+72 files in other folders)
